# vdmnexus

./: .gitignore  CLAUDE.md  Caddyfile  README.md  STATUS.md  SUBMISSIONS.md  WORKFLOW.md  docker-compose.yml  package.json  pnpm-lock.yaml  smoke_test_mainnet.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  football-ingest.yml  gitlawb-mirror.yml
.gitlawb/: announcement.md  receipt.json
agents/polymarket/: .env.example  .gitignore  Dockerfile  PIPELINE.md  README.md  prompt.md  pyproject.toml  strategy-memo-2026-05-23.md
agents/polymarket/exports/: scores.json  team_profiles.json  tournament.json  wc26_calibration.csv
agents/polymarket/polymarket_agent/: __init__.py  __main__.py  backtest_wc.py  bankroll.py  build_squads.py  calibrate.py  config.py  exp_altitude.py  exp_form.py  exp_heat.py  exp_host.py  exp_inplay.py  exp_rest.py  exp_talent.py  exp_travel.py  exp_travel_ew.py  exp_xg.py  exp_xg_gate.py  export_profiles.py  export_scores.py  export_tournament.py  fotmob_live.py  ingest.py  main.py  markets.py  model.py  polymarket.py  pool_picks.py  reasoning.py  regate.py  resolver.py  roster_talent.py  scanner.py  selfcheck.py  sim.py  store.py  supabase_client.py  wc26_calibrate.py
agents/polymarket/refdata/: base_camps_2018.csv  base_camps_2022.csv  base_camps_2026.csv  coaches_2026.csv  counter_reliance_2026.csv  fifa26_players.csv  fotmob_xg_cache.json  roster_talent_2018.csv  roster_talent_2022.csv  roster_talent_2026.csv  squads_2018.csv  squads_2022.csv  squads_2026.csv  statsbomb_xg.json  wc26_played.csv  xg_model.json
agents/polymarket/research/: EXPERIMENTS.md  PROJECT_BRIEF.md  grok-prompt.md  grok-research-2026-06-03.md
agents/polymarket/sql/: 001_football_data.sql
apps/api/: .env.example  (+3 more)
marketing/: ship-broadcast.md  token-launch-checklist.md
outreach/: 01-erik-reppel.md  02-shaw-elizaos.md  03-mert-helius.md  04-mastra-team.md  05-skyfire.md  README.md  listings-and-erc8004-decisions.md  x402-ecosystem-pr-packet.md
planning/: NEXT.md  README.md
prompts/: 00-daily-review.md  01-apply-feedback.md  01-python-sdk.md  02-discovery-listings.md  03-erc-8004-card.md  04-agentkit-pr.md  05-mastra-vercel-providers.md  06-compliance-one-pager.md  README.md
scripts/: broadcast-agent.py  validate-broadcast-output.ts
(+482 files in other folders)
