[project]
name = "polymarket-agent"
version = "0.1.0"
description = "VDM Nexus flagship prediction-market agent — signs every prediction with a Nexus inference receipt and bets on Polymarket."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dennis van der Meulen", email = "dennis@vdmnexus.com" }]
dependencies = [
    "vdm-nexus>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.9.0",
    "pydantic>=2.9.0",
    # Pinned to v1 — v2 (PyPI: py-clob-client-v2 / package name TBD on PyPI)
    # ships an incompatible API; migrate intentionally when stable.
    "py-clob-client>=0.21.0,<1.0.0",
]

[project.scripts]
polymarket-agent = "polymarket_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polymarket_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
